[package]
name = "ehdr"
version = "0.3.0"
authors = ["Jan Kremser <git@nerdbrief.de>"]
edition = "2018"
description = "easy hdr video converter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1.4"
clap = "2.33"
